<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab1</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hello_message">Hello!</string>
    <string name="button_text">I\'m a button</string>
    <string name="login_name">Login name</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="switch_box">What does this do?</string>
    <string name="image_desc">Image</string>
    <string name="image_flag">Flag</string>
    <string name="login_button">Login</string>
    <string name="default_email">email@domain.com</string>
    <string name="dialog_message">Do you want to Finish?</string>
    <string name="dialog_title">Exit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="response">Here Is My Response</string>
    <string name="weather">Weather Activity</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="current">Current</string>
    <string name="wind_speed">Wind Speed</string>

</resources>