<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radio"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button" />
    <CheckBox
        android:id="@+id/checkbox"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box"
        />

    <Switch
        android:id="@+id/simpleSwitch"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:checked="true"
        android:text="@string/switch_box" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:contentDescription="@string/image_desc"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera"
        tools:layout_width="match_parent" />
</GridLayout>
